Fix layout bug in line number column for Safari

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -135,6 +135,7 @@
     margin-right: .75em;
     padding-right: .5em;
     text-align: right;
+    flex: 1 0 auto;
     order: 1;
     -webkit-user-select: none;
        -moz-user-select: none;
